--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "paypal-rest-sdk": "^1.8.1",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4"
   }
